compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_variable_discard.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 452
expression: "pub fn main() {\n    let _boringNumber = 72\n}"
---
----- BEFORE ACTION
pub fn main() {
    let _boringNumber = 72
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑ 
}


----- AFTER ACTION
pub fn main() {
    let _boring_number = 72
}
