compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__unqualified_to_qualified_import_after_constructor.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 2834
expression: "\npub fn create_user(name: String) -> User {\n    User(name: name, id: 1)\n}\n\nimport user.{type User, User}\n"
---
----- BEFORE ACTION

pub fn create_user(name: String) -> User {
    User(name: name, id: 1)
    ▔▔▔▔▔↑                 
}

import user.{type User, User}


----- AFTER ACTION

pub fn create_user(name: String) -> User {
    user.User(name: name, id: 1)
}

import user.{type User, }
